Obligatorio/styles.css
body {
    background-color: #070d59;
    color: #ceddef;
    clear: both;
    margin: auto;
    font-family: 'Roboto Condensed', sans-serif;
}
main{
    display:flex;
    margin:auto;
    clear: both;
    flex-direction:row;
    flex-wrap:wrap;
}
#searchInput {
    background-image: url(img/iconoBuscar.png);
    background-position: 2px 3px;
    background-repeat: no-repeat;
    background-size:20px;
    padding-left:5px;
    width:200px;
}
a:link {
    background-color: #5893d4;
    color: #ceddef;
    padding: 5px;
    border-color: #ceddef;
    text-decoration: none;
}

a:visited {
    background-color: #5893d4;
    color: #ceddef;
    padding: 5px;
    border-color: #ceddef;
    text-decoration: none;
}

a:hover {
    background-color: #7cb9fa;
    color: #ceddef;
    padding: 5px;
    border-color: #ceddef;
    text-decoration: none;
}

button:hover {
    background-color: #5893d4;
    height: 100%;
    width: 100%;
}

section{
    clear:both;
    display:inline-block;
    width:75%;
    height:auto;
    float right;
}
#eventNav{
    display:inline-block;
    height:1600px;
    width:auto;
}
#middleArticle {
    display: flex;
    width: 100%;
    background-color: #5893d4;
}
#middleSpan1{
    float:right;
    margin-left:10%
}
#middleSpan2{
    float: left;
}
#News{
    display:inline-block;
    text-align:left;
    margin-left:11%;
    width:100%;
}

ul{
    list-style-type:none;
    width:auto;
    height:100%;
}
li{
    padding-bottom:20px;
    font-size:20px;
    width:auto;
}
.iconLi{
    display:inline;
}
.dataUser{
    float:right;
    clear:both;
}
.container{
    display:flow-root;
}
footer{
    display:flex;
    clear:both;
    margin:auto;
    flex-direction:row;
    flex-wrap:wrap;
    background-color: #1f3c88;
    height:100px;
    width: 100%;
}
header{
    background-color: #1f3c88;
    width:auto;
    height:100px;
}
aside, span{
    display:inline-block;
    clear:both;
    margin: auto;
}
.indexEventsContainer{
    margin-left:10%;
    width:65%;
}
.indexContainer{
    display:flex;
    clear:both;
    margin:auto;
    flex-direction:row;
    flex-wrap:wrap;
}

article{
    display:inline-block;
    clear: both;
    margin:auto;
}

#evento {
    margin-left:20%;
}

#eventAside {
    height: auto;
    width: auto;
    position: absolute;
    background-color: #5893d4;
}

#indexAside{
    height:2000px;
    width:25%;
    float:right;
    position:relative;
    clear:both;
    margin:auto;
    background-color: #5893d4;
}
.searchBar {
    position:absolute
}

.searchBar, img {
    border-radius: 25px; 
    position: relative; 
    top: 3px; 
    left: 2px;
}

.searchBar{
    margin-right:50px;
}


.inputForm{
    display:block;
}

.searchBar, input {
    color: azure;
    background-color: rgb(30, 73, 192);
    border-radius: 25px; 
    border: 2px solid azure; 
    text-align: center; 
    padding: 5px;
}
.searchBar{
    float:right;
}
#span1{
    width:auto;
    height:180px;
    float:left;
    margin-left:200px;
}
.indexForm {
    width: auto;
    height: 180px;
    margin-left:200px;
    float: right;
}
.labelForm, checkbox{
    display:block;
}
form {
    display: inline-block;
    position: relative;
    width:auto;
}

input[type="checkbox"]{
    display:inline;
    text-align:left;
}

.formText{
    position:center;
    display:block;
    width:100%;
}
#upLinksRight{
    position:relative;
    display:inline-block;
    width:33.33333333%;
    text-align:right;
    margin-right:1%;
}
#upLinksMiddle {
    position: relative;
    display: inline-block;
    width: 33.33333333%;
    text-align:center;
}
#upLinksLeft {
    position: relative;
    display: inline-block;
    width:27%;
    margin-left: 10.33333333%;
    text-align:left;
}
#formListEvents{
    display:block;
}
#spanHeaderListEvents{
    display:inline-block;
    float:left;
    margin-left:50px;
}
#ulIndex:nth-child(2n+0) {
    /*white-space: pre-line;*/
    padding: 5px;
}
#navListEvents{
    display:block;
}
#ulListEvents{
    display:block;
}
#asideListEvents {
    display: inline-block;
    float: left;
    width: 13%;
    height: 1600px;
    background-color: #5893d4;*/
}
#listEventsArticle{
    width: 87%;
}
img{
    position:relative;
}
.eventsSpan {
    position: relative;
    display: inline-block;
    height: 300px;
    width: 300px;
    margin-bottom:190px;
}
.loginContainer {
    position:relative;
    width: 100%;
    text-align:center;
}
#loginForm {
    text-align:center;
    position:relative;
    margin-top:10%;
    margin-bottom:50%;
}
#imageLogin{
    margin:auto;
    margin-bottom:50px;
    display:block;
    text-align:center;
}
.hrefSeeMore{
    text-align:right;
    float:right;
    width:60px;
    position:relative;
}
.seeMore {
    background-color: rgb(35, 58, 82);
    display: inline-block;
    height: auto;
    width: 900px;
    margin-top: 100px;
    margin-bottom: 50px;
}
.liIndex{
    margin-top:70px;
    margin-bottom:70px;
}
#bottomArticle{
    margin-top:100px;
    display:contents;
}
.bottomSection {
    background-color:rgb(35, 58, 82);
    height:50px;
    width:100%;
    display:flex;
    flex-direction:row;
    flex-wrap:wrap;
    margin:auto;
    clear:both;
}

#crearEventoSection{
    display:inline;
}

#logoCrearEvento{
    text-align:right;
    margin-left:200px;
}

#bottomSpan1{
    width:34%;
    height:auto;
}
#bottomSpan2 {
    width: 34%;
    height: auto;
}

/*table stuff begins*/

table {
    width: 1300px;
    text-align: center;
    height: 300px;
    border-collapse: collapse;
}

table{
    border-spacing:50px;
}

tr:nth-child(even) {
    background-color: #073668;
}

/*table stuff ends*/

#copyRightText{
    margin-left:20%;
    display:block;
    text-align:left;
}

#copyRightContainer{
    width:50%;
}

#imagesFooterContainer{
    text-align:center;
    width:50%;
}


#sn1, #sn2, #sn3 {
	width: 90px;
	height: 90px;
  background-image: url("img/ftp.png");
}


#sn1{
	background-position: 0 0;
}

#sn2{
	background-position: -90px 0;
}

#sn3{
	background-position: -180px 0;
}

#sn1:hover{
	background-position: 0 -90px;
}

#sn2:hover{
	background-position: -90px -90px;
}

#sn3:hover{
	background-position: -180px -90px;
}

.socialMediaList{
    display:inline;
    padding-bottom:0px;
    margin-right:5%;
    height:100%;
    width:100%;
}

#Emotions{
    margin-left:10%;
}

#help{
    margin-left:40px;
}
#frequentQuestion{
    margin-left:40px;
}
nav{
    display:flex;
}
/*end of social network buttons*/

